{
    "name": "GameControl",
    "maps": [
        {
            "name": "Game",
            "id": "7b9ade68-64b8-4237-8c9a-d119ebfb4879",
            "actions": [
                {
                    "name": "OpenStore",
                    "type": "Button",
                    "id": "091ca47c-74d7-4765-9c3d-cd71d40f3bad",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenBook",
                    "type": "Button",
                    "id": "ea01e06b-5619-4e1f-aa22-016908ea2fb4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "5a7bc608-01fe-4a61-b932-375ba7b0a99b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Craft",
                    "type": "Button",
                    "id": "08a33668-0747-406d-8850-7b76e9705451",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "f7d2849a-0f56-4b86-a5af-d28fffab9238",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenStore",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2fb3d6c5-8229-4eec-b394-de269d1d1460",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "OpenBook",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3401b2c2-0a29-4f4e-b6e2-ba59c7b2b140",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "02ac78f5-b537-496e-9c13-9837fa3e154e",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Craft",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}